# labsOOP

lab1_v14/: CMakeLists.txt
lab1_v14/src/: main_lab1.cpp  task.cpp  task.h
lab1_v14/test/: tests01.cpp
